--- a/index.html
+++ b/index.html
@@ -3,20 +3,21 @@
 <html>
 
 <head>
-    <title>Login - Controle de gastos</title>
+    <title>Controle de gastos</title>
 </head>
 
-<body>
+<body class="centralize">
     <form>
-        <div>
+        <div class="form-field">
             <div><label>Email</label></div>
             <input type="email" name="email" id="email" placeholder="seu@email.com" onchange="onChangeEmail()"/>
             <div class="error" id="email-required-error">Email é obrigatório</div>
             <div class="error" id="email-invalid-error">Email é inválido</div>
-        <div>
+        </div>
+        <div class="form-field">
             <div><label>Senha</label></div>
             <input type="password" name="password" id="password" placeholder="Senha" onchange="onChangePassword()"/>
-            <div class="error" id="password-invalid-error">Senha é obrigatório</div>
+            <div class="error" id="password-required-error">Senha é obrigatória</div>
         </div>
         <div>
             <button type="button" class="clear" id="recover-password-button" disabled="true">Recuperar senha</button>
@@ -31,11 +32,14 @@
 </body>
 
 <link rel="stylesheet" href="index.css">
+<link rel="stylesheet" href="global.css">
 
 <script src="index.js"></script>
 <script src="validations.js"></script>
-<script src="https://www.gstatic.com/firebasejs/11.0.2/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/11.0.2/firebase-auth-compat.js"></script>
+<script src="loading.js"></script>
+
+<script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-auth-compat.js"></script>
 
 <script>
      // Your web app's Firebase configuration
@@ -48,12 +52,6 @@
     appId: "1:728892738526:web:2af652e7eaac2d7643eb4f"
   };
   firebase.initializeApp(firebaseConfig);
-  console.log('antes');
-  firebase.auth().signInWithEmailAndPassword('luidemendesrios@gmail.com','123456').then(response =>{
-    console.log('sucess',response);
-  }).catch(error =>{
-    console.log('error',error);
-  });
-  console.log('depois');
+  
 </script>
 </html>
