--- a/pages/register/register.html
+++ b/pages/register/register.html
@@ -3,11 +3,37 @@
 <html>
 
 <head>
-    <title>Register - Controle de gastos</title>
+    <title>Registrar - Controle de gastos</title>
 </head>
 
-<body>
-    Register
+<body class="centralize">
+    <form action="">
+        <div class="form-field">
+            <label for="">Email</label>
+        </div>
+        <div class="form-field"> 
+            <input type="email" placeholder="seu@email.com"/>
+        </div>
+        <div class="form-field">
+            <label for="">Senha</label>
+        </div>
+        <div class="form-field">
+            <input type="password" placeholder="senha"/>
+        </div>
+        <div class="form-field">
+            <label for="">Confirmar senha</label>
+        </div>
+        <div class="form-field">
+            <input type="password" placeholder="confirmar senha"/>
+        </div>
+        <div class="form-field">
+            <button type="button" class="solid">Registrar</button>
+        </div>
+        <div class="form-field" >
+            <button type="button" class="clear">Login</button>
+        </div>
+    </form>
 </body>
-
+<link rel="stylesheet" href="../../global.css">
+<link rel="stylesheet" href="register.css">
 </html>
