--- a/pages/register/register.html
+++ b/pages/register/register.html
@@ -12,22 +12,29 @@
             <label for="">Email</label>
         </div>
         <div class="form-field"> 
-            <input type="email" placeholder="seu@email.com"/>
+            <input type="email" placeholder="seu@email.com" onchange="onChangeEmail()" id="email"/>
         </div>
+        <div class="error" id="email-required-error">Email é obrigatório</div>
+        <div class="error" id="email-invalid-error">Email é inválido</div>
+
         <div class="form-field">
             <label for="">Senha</label>
         </div>
         <div class="form-field">
-            <input type="password" placeholder="senha"/>
+            <input type="password" placeholder="senha" id="password" onchange="onChangePassword()"/>
         </div>
+        <div class="error" id="password-required-error">Senha é obrigatória</div>
+        <div class="error" id="password-min-length-error">Senha deve ter pelo menos 6 caracteres</div>
+
         <div class="form-field">
             <label for="">Confirmar senha</label>
         </div>
         <div class="form-field">
-            <input type="password" placeholder="confirmar senha"/>
+            <input type="password" placeholder="confirmar senha" id="confirmPassword" onchange="onChangeConfirmPassword()"/>
         </div>
+        <div class="error" id="password-doesnt-match-error">Senha é confirmar senha deve ser iguais</div>
         <div class="form-field">
-            <button type="button" class="solid">Registrar</button>
+            <button type="button" class="solid" disabled="true" id="register-button">Registrar</button>
         </div>
         <div class="form-field" >
             <button type="button" class="clear">Login</button>
@@ -36,4 +43,6 @@
 </body>
 <link rel="stylesheet" href="../../global.css">
 <link rel="stylesheet" href="register.css">
+<script src="register.js"></script>
+<script src="../../validations.js"></script>
 </html>
