Registro de novo usuário com javascript

--- a/pages/register/register.html
+++ b/pages/register/register.html
@@ -34,7 +34,7 @@
         </div>
         <div class="error" id="password-doesnt-match-error">Senha é confirmar senha deve ser iguais</div>
         <div class="form-field">
-            <button type="button" class="solid" disabled="true" id="register-button">Registrar</button>
+            <button type="button" class="solid" disabled="true" id="register-button" onclick="register()">Registrar</button>
         </div>
         <div class="form-field" >
             <button type="button" class="clear">Login</button>
@@ -45,4 +45,10 @@
 <link rel="stylesheet" href="register.css">
 <script src="register.js"></script>
 <script src="../../validations.js"></script>
+
+<script src="../../loading.js"></script>
+
+<script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-auth-compat.js"></script>
+<script src="../../firebase-init.js"></script>
 </html>
